# NumericalAnalysis

./: CMakeLists.txt  README.md
src/: GradientDescentSolver.h  NewtonSolver.h  NumericalAnalysis.cxx  NumericalAnalysis.h  TestGradientDescentSolver.cxx  TestGradientDescentSolver.h  TestNewtonSolver.cxx  TestNewtonSolver.h  TestNumericalAnalysis.cxx
